config-root/namespaces/jx-production/xl-go-devops-training/xl-go-devops-training-xl-go-devops-training-deploy.yaml
# Source: xl-go-devops-training/templates/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: xl-go-devops-training-xl-go-devops-training
  labels:
    draft: draft-app
    chart: "xl-go-devops-training-0.0.1"
    gitops.jenkins-x.io/pipeline: 'namespaces'
  annotations:
    meta.helm.sh/release-name: 'xl-go-devops-training'
    wave.pusher.com/update-on-config-change: 'true'
  namespace: jx-production
spec:
  selector:
    matchLabels:
      app: xl-go-devops-training-xl-go-devops-training
  replicas: 1
  template:
    metadata:
      labels:
        draft: draft-app
        app: xl-go-devops-training-xl-go-devops-training
    spec:
      serviceAccountName: xl-go-devops-training-xl-go-devops-training
      containers:
        - name: xl-go-devops-training
          image: "gcr.io/xl-devops/xl-go-devops-training:0.0.1"
          imagePullPolicy: IfNotPresent
          envFrom: null
          ports:
            - name: http
              containerPort: 8080
          livenessProbe:
            httpGet:
              path: /
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          readinessProbe:
            httpGet:
              path: /
              port: 8080
            periodSeconds: 10
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            limits:
              cpu: 400m
              memory: 256Mi
            requests:
              cpu: 200m
              memory: 128Mi
      terminationGracePeriodSeconds:
      imagePullSecrets:
